--- a/public_html/left.html
+++ b/public_html/left.html
@@ -53,21 +53,21 @@
     <body>
 
     <center>
-    <a href="index.html" target="top"><img src="flag_20240106a.png"></a>
+    <a href="index.html" target="top"><img src="flag_top.png"></a>
     <br>
     <br>
 
     <table>
         <tbody>
-            <tr><td><a href="group.html" target="right"><img src="btn1.png"></a></td></tr>
+            <tr><td><a href="group.html" target="right"><img src="btn_group.png"></a></td></tr>
             <tr><td></td></tr>
-            <tr><td><a href="recruit.html" target="right"><img src="btn2.png"></a></td></tr>
+            <tr><td><a href="recruit.html" target="right"><img src="btn_recruit.png"></a></td></tr>
             <tr><td></td></tr>
-            <tr><td><a href="activity.html" target="right"><img src="btn3.png"></a></td></tr>
+            <tr><td><a href="activity.html" target="right"><img src="btn_activity.png"></a></td></tr>
             <tr><td></td></tr>
-            <tr><td><a href="middle_school.html" target="right"><img src="btn4.png"></a></td></tr>
+            <tr><td><a href="middle_school.html" target="right"><img src="btn_middle_school.png"></a></td></tr>
             <tr><td></td></tr>
-            <tr><td><a href="youth.html" target="right"><img src="btn5.png"></a></td></tr>
+            <tr><td><a href="youth.html" target="right"><img src="btn_youth.png"></a></td></tr>
             <tr><td></td></tr>
             <tr><td><a href="santachi.html" target="right"><img src="btn_santachi.png"></a></td></tr>
             <tr><td>　</td></tr>
