--- a/public_html/first.html
+++ b/public_html/first.html
@@ -31,7 +31,7 @@
         小学生、中学生、青年部(高校生、大人)が稽古に励んでいます。<br>
         見学・体験を随時受け付けています。<br>
         <br>
-        <img src="bunai_20240107.jpg" width="50%">
+        <img src="top.jpg" width="50%">
         <br>
         <br>
         <br>
