--- a/public_html/group.html
+++ b/public_html/group.html
@@ -102,7 +102,7 @@
         <a href="middle_school.html" target="top">中学校部活動の地域移行</a><br>
         <a href="youth.html" target="top">青年部</a><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top"><img src="instagram_logo_c.png"　width="40" height="40"></a>
-        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="Facebook_Logo_20240115.png"　width="40" height="40"></a><br>
+        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="facebook_log_c.png"　width="40" height="40"></a><br>
         <br>
 
     </body>
