--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -87,7 +87,7 @@
         <br>
 
         <h2>入団～剣道具の流れ(小学生の場合)</h2>
-        <img src="taiken_nagare_20240108.png">
+        <img src="taiken_nagare.png">
         <br>
         見学・体験のときは、動きやすい服装、手ぶらでお越しください。<br>
         簡単な剣道の稽古を、団の子どもたちと一緒に体験してください。<br>
@@ -97,7 +97,7 @@
 
         <h2>2023年4月剣道体験会のチラシ</h2>
         例年、4月に剣道体験会を開催しています。<br>
-        <img src="2023taiken.jpg"><br>
+        <img src="2023_taiken.jpg"><br>
         <br>
 
         <h2>お問い合わせ</h2>
