--- a/public_html/middle_school.html
+++ b/public_html/middle_school.html
@@ -44,7 +44,7 @@
         青木島剣道少年団は、中学生の皆さんを歓迎します。<br>
         剣道初心者及び経験者の皆さん、ぜひ一緒に楽しく稽古をしましょう！<br>
         <br>
-        <img src="bukatu_20240106.png"><br>
+        <img src="bukatu.png"><br>
         <br>
         初心者には、基本的な稽古(足さばき、素振り)から、<br>
         経験者には、基本に加えて試合に向けた稽古を行います。<br>
@@ -87,7 +87,7 @@
         <a href="recruit.html" target="top">入団案内</a><br>
         <a href="youth.html" target="top">青年部</a><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top"><img src="instagram_logo_c.png"　width="40" height="40"></a>
-        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="Facebook_Logo_20240115.png"　width="40" height="40"></a><br>
+        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="facebook_log_c.png"　width="40" height="40"></a><br>
         <br>
    
     
