--- a/public_html/youth.html
+++ b/public_html/youth.html
@@ -43,7 +43,7 @@
 
         稽古中に疲れた場合、いつでも休憩することができます。<br>
         大人の場合、飲み込みが早いため、2ヶ月ほどで剣道具(面、胴、垂、小手)を着装できるようになります。<br>
-        <img src="wo20240106.png"><br>
+        <img src="youth.png"><br>
         <br>
 
 
@@ -56,6 +56,6 @@
         <a href="recruit.html" target="top">入団案内</a><br>
         <a href="middle_school.html" target="top">中学校部活動の地域移行</a><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top"><img src="instagram_logo_c.png"　width="40" height="40"></a>
-        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="Facebook_Logo_20240115.png"　width="40" height="40"></a><br>
+        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="facebook_log_c.png"　width="40" height="40"></a><br>
     </body>
 </html>
