--- a/public_html/santachi.html
+++ b/public_html/santachi.html
@@ -39,7 +39,7 @@
 
         <h2>剣道東西対抗戦　三太刀杯</h2>
         更北地区の剣道クラブ(数チーム)の小中学生が、川中島合戦をイメージした武田軍・上杉軍に分かれて東西対抗の試合をします。<br>
-        <img src="uesugi_takeda_2.jpg"><br>
+        <img src="santachi.jpg"><br>
         応援をよろしくお願いします！<br>
         屋外での試合になります。<br>
         <br>
@@ -71,6 +71,6 @@
         <a href="recruit.html" target="top">入団案内</a><br>
         <a href="middle_school.html" target="top">中学校部活動の地域移行</a><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top"><img src="instagram_logo_c.png"　width="40" height="40"></a>
-        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="Facebook_Logo_20240115.png"　width="40" height="40"></a><br>
+        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="facebook_log_c.png"　width="40" height="40"></a><br>
     </body>
 </html>
