--- a/public_html/group.html
+++ b/public_html/group.html
@@ -45,7 +45,7 @@
         <br>
 
         <h2>活動方針</h2>
-        <img src="policy_20240106b.png">
+        <img src="policy.png">
 
         <br>
         <h2>団員数</h2>
