--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -34,9 +34,11 @@
 
     <hr>
     <h2>2023年度</h2>
-    04月05日　川中島古戦場三太刀杯<br>
+    04月01日　穂高剣道スポーツ少年団交流剣道練成会
+    04月08日　川中島古戦場三太刀杯<br>
     04月23日　見学イベント<br>
     04月30日　見学イベント<br>
+    05月20日　松代藩文武学校杯争奪小学生選抜剣道大会(練成会)<br>
     05月21日　松代藩文武学校杯争奪小学生選抜剣道大会<br>
     07月09日　長野県小学生剣道錬成大会<br>
     07月16日　海の日越後少年剣道錬成大会<br>
@@ -44,6 +46,7 @@
     07月22日　全日本少年少女剣道錬成大会<br>
     08月11日　日大記念大会<br>
     08月12日　信大大会<br>
+    08月19日　レク　新入団員歓迎会
     09月02日　合宿<br>
     09月16日　中野市少年剣道練成会<br>
     09月17日　長野市柔剣道大会<br>
@@ -56,6 +59,7 @@
     12月03日　みすずライオンズ杯争奪長野少年剣道大会<br>
     12月17日　やまびこ大会<br>
     12月22日　部内大会<br>
+    02月03日　レク　節分豆まき
 
     <br>
     <br>
