--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -34,7 +34,7 @@
 
     <hr>
     <h2>2023年度</h2>
-    04月01日　穂高剣道スポーツ少年団交流剣道練成会
+    04月01日　穂高剣道スポーツ少年団交流剣道練成会<br>
     04月08日　川中島古戦場三太刀杯<br>
     04月23日　見学イベント<br>
     04月30日　見学イベント<br>
@@ -46,7 +46,7 @@
     07月22日　全日本少年少女剣道錬成大会<br>
     08月11日　日大記念大会<br>
     08月12日　信大大会<br>
-    08月19日　レク　新入団員歓迎会
+    08月19日　レク　新入団員歓迎会<br>
     09月02日　合宿<br>
     09月16日　中野市少年剣道練成会<br>
     09月17日　長野市柔剣道大会<br>
