--- a/public_html/santachi.html
+++ b/public_html/santachi.html
@@ -57,7 +57,11 @@
         <br>
 
         <h2>前回(2023年4月)の様子</h2>
-        準備中<br>       
+        <img src="santachi_2.jpg"><br>
+        <br>
+        <img src="santachi_1.jpg"><br>
+        <br>
+                    
 
         
 
