節分画像追加

--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -20,10 +20,19 @@
             font-family: 'Zen Maru Gothic', "HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO","ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro",serif;
             color:#ED8C72;
         }
+        h3{
+            font-family: 'Zen Maru Gothic', "HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO","ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro",serif;
+            color:#ED8C72;
+        }
         body{
             font-family: 'Zen Maru Gothic', "HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO","ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro",serif;
             background-color: #F4EADE;
             font-size:large;
+        }
+
+        table{
+            font-family: 'Zen Maru Gothic', "HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO","ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro",serif;
+            font-size: large;
         }
     </style>
     
@@ -61,6 +70,17 @@
     12月22日　部内大会<br>
     01月07日　レク　稽古始め<br>
     02月03日　レク　節分豆まき<br>
+    <br>
+
+    <h3>稽古以外のイベントも楽しく活動しています</h3>
+    <table>
+        <tr><td>02月03日 節分豆まき</td><td></td><td></td></tr>
+        <tr><td><img src="setubun_1.jpg" width="400" height="530"><br></td><td></td><td></td></tr>
+        <tr><td> </td><td> </td><td> </td></tr>
+        <tr><td></td><td></td><td></td></tr>
+        <tr><td></td><td></td><td></td></tr>
+    </table>
+
 
     <br>
     <br>
