ハロウィン追加

--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -33,6 +33,7 @@
         table{
             font-family: 'Zen Maru Gothic', "HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO","ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro",serif;
             font-size: large;
+            color:white;
         }
     </style>
     
@@ -62,6 +63,7 @@
     09月23日　上越少年剣道練成会<br>
     10月08日　真田まつり<br>
     10月09日　権堂大会<br>
+    10月28日　レク　ハロウィン<br>
     11月03日　更埴大会<br>
     11月05日　佐久っこ大会<br>
     11月23日　小坂憲次杯<br>
@@ -74,8 +76,8 @@
 
     <h3>稽古以外のイベントも楽しく活動しています</h3>
     <table>
-        <tr><td>02月03日 節分豆まき</td><td></td><td></td></tr>
-        <tr><td><img src="setubun_1.jpg" width="400" height="530"><br></td><td></td><td></td></tr>
+        <tr><td bgcolor="#2F496E" >　10月28日 ハロウィン</td><td></td><td bgcolor="#2F496E">　02月03日 節分豆まき</td></tr>
+        <tr><td><img src="halloween_1.jpg" width="400" height="530"><br></td><td></td><td><img src="setubun_1.jpg" width="400" height="530"></td></tr>
         <tr><td> </td><td> </td><td> </td></tr>
         <tr><td></td><td></td><td></td></tr>
         <tr><td></td><td></td><td></td></tr>
