佐々木くん削除

--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -76,8 +76,8 @@
 
     <h3>稽古以外のイベントも楽しく活動しています</h3>
     <table>
-        <tr><td bgcolor="#2F496E" >　10月28日 ハロウィン</td><td></td><td bgcolor="#2F496E">　02月03日 節分豆まき</td></tr>
-        <tr><td><img src="halloween_1.jpg" width="400" height="530"><br></td><td></td><td><img src="setubun_1.jpg" width="400" height="530"></td></tr>
+        <tr><td bgcolor="#2F496E" ></td><td></td><td bgcolor="#2F496E">　02月03日 節分豆まき</td></tr>
+        <tr><td></td><td></td><td><img src="setubun_1.jpg" width="400" height="530"></td></tr>
         <tr><td> </td><td> </td><td> </td></tr>
         <tr><td></td><td></td><td></td></tr>
         <tr><td></td><td></td><td></td></tr>
