中体連注意事項追加

--- a/public_html/first.html
+++ b/public_html/first.html
@@ -33,6 +33,9 @@
         <br>
         <img src="top.jpg" width="50%">
         <br>
+        <h2>お問い合わせ</h2>
+        見学・体験をご希望の方は下記までメールをお願いいたします。<br>
+        mail : aokijimakendosyonendan@gmail.com<br>
         <br>
         <br>
 
