--- a/public_html/middle_school.html
+++ b/public_html/middle_school.html
@@ -64,6 +64,10 @@
             </tr>
         </table>
         ※級審査は年に2回、段審査は年に4回チャンスがあります。<br>
+        <font color=Red><b>
+        ※2024年度5月の中体連 大会には、団としては参加しません。<br>
+        ※2024年度9月の中体連 新人大会には、中学生の希望状況により参加申請することを計画しています。団としての中体連への申請がはじめてであるため、状況によっては参加できない場合があることをあらかじめご了承ください。<br>
+        </b></font>
         <br>
         <br>
 
