ハロウィン画像追加

--- a/public_html/middle_school.html
+++ b/public_html/middle_school.html
@@ -44,7 +44,7 @@
         青木島剣道少年団は、中学生の皆さんを歓迎します。<br>
         剣道初心者及び経験者の皆さん、ぜひ一緒に楽しく稽古をしましょう！<br>
         <br>
-        <img src="bukatu.png"><br>
+        <img src="bukatu.png" width="50%"><br>
         <br>
         初心者には、基本的な稽古(足さばき、素振り)から、<br>
         経験者には、基本に加えて試合に向けた稽古を行います。<br>
