--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -95,9 +95,9 @@
         1度体験しただけではわからないと思いますので、何度でも体験してください！<br>
         <br>
         遊びの要素を取り入れた稽古もやります<br>
-        新聞紙切り<br>
+        <a href="https://youtu.be/8hLck-Wl5a4" target="top">新聞紙切り(スマホの場合はこちらをクリックしてください)</a><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8hLck-Wl5a4?si=rCQJxzKfFdIM-kBw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+        
 
         <h2>2023年4月剣道体験会のチラシ</h2>
         例年、4月に剣道体験会を開催しています。<br>
