書き初め　追加

--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -79,6 +79,8 @@
         <tr><td bgcolor="#2F496E">　10月28日　ハロウィン</td></tr>
         <tr><td><img src="halloween_1.jpg" width="530" height="400"></td></tr>
         <tr><td>　　　　 </td></tr>
+        <tr><td bgcolor="#2F496E">　01月07日　稽古始め</td></tr>
+        <tr><td><img src="kakizome_1.jpg" width="530" height="400"></td></tr>
 
     </table>
 
