トップ画像変更、田子資格変更

--- a/public_html/first.html
+++ b/public_html/first.html
@@ -26,21 +26,18 @@
     </style>
     <body>
         <h1>ようこそ!　青木島剣道少年団 ホームページへ</h1>
-        青木島剣道少年団は30年にわたり<br>
+        青木島剣道少年団は33年にわたり<br>
         長野県長野市更北地区で活動する社会体育の剣道教室です。<br>
         小学生、中学生、青年部(高校生、大人)が稽古に励んでいます。<br>
         見学・体験を随時受け付けています。<br>
         <br>
         <img src="top.jpg" width="50%">
         <br>
-        <h2>お問い合わせ</h2>
-        見学・体験をご希望の方は下記までメールをお願いいたします。<br>
-        mail : aokijimakendosyonendan@gmail.com<br>
+        <h2>見学・体験・ご質問など</h2>
+        見学・体験をご希望の方は、お気軽に下記までご連絡ください。<br>
+        青木島剣道少年団  <font color=blue><b>aokijimakendosyonendan@gmail.com</b></font><br>
         <br>
-        <br>
-
         <a href="index.html" target="top">ホームへ</a>
-
         <br>
     </body>
 </html>
