--- a/public_html/group.html
+++ b/public_html/group.html
@@ -81,7 +81,7 @@
             </tr>
             
             <tr>
-                <td>田子博和</td><td>三段</td><td>全日本剣道連盟 社会体育初級指導員</td>
+                <td>田子博和</td><td>三段</td><td>全日本剣道連盟 社会体育初級指導員<br>日本スポーツ協会 スポーツコーチングリーダー</td>
             </tr>
             <tr>
                 <td>清水翔平</td><td>三段</td><td></td>
