--- a/public_html/santachi.html
+++ b/public_html/santachi.html
@@ -2,7 +2,7 @@
     <head>
         <title>青木島剣道少年団 三太刀まつり</title>
         <meta charset="UTF-8">
-        <meta keywords="川中島古戦場,三太刀まつり,三太刀杯,剣道,体験会">
+        <meta keywords="川中島古戦場,三太刀まつり,桜,剣道,体験会">
         <meta name="description" content="川中島古戦場 三太刀まつりのイベントとして剣道対抗戦と剣道体験会を実施します。">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
