個人追加情報　追加

--- a/public_html/group.html
+++ b/public_html/group.html
@@ -67,14 +67,14 @@
         <h2>指導者</h2>
         <table border="1" cellpadding="10">
             <tr>
-                <td>団長</td><td>黒柳博子</td><td>五段</td><td></td>
+                <td>団長</td><td>黒柳博子</td><td>五段</td><td>地域に剣道を練習する場を求め創立</td>
             </tr>
             <tr>
-                <td>師範</td><td>常田政邦</td><td>教士七段</td><td>全日本剣道連盟 社会体育初級指導員</td>
+                <td>師範</td><td>常田政邦</td><td>教士七段</td><td>長野県剣道連盟 理事<br>全日本剣道連盟 社会体育初級指導員</td>
             </tr>
             
             <tr>
-                <td rowspan="6">指導員</td><td>小山秀弥</td><td>七段</td><td>全日本剣道連盟 社会体育初級指導員</td>
+                <td rowspan="6">指導員</td><td>小山秀弥</td><td>七段</td><td>長野県代表　全日本剣道大会4回出場<br>全日本剣道連盟 社会体育初級指導員</td>
             </tr>
             <tr>
                 <td>小松甲征</td><td>四段</td><td></td>
