掲載情報の注記　追加

--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -69,13 +69,14 @@
         青年部には、お子さんの保護者(初心者、リバ剣)も参加しています。<br>
         <br>
 
-        <h2>会費</h2>
+        <h2>費用</h2>
         <li>未就学児　月額0円　+　スポーツ保険料</li>
         <li>小学生　月額1500円　+　スポーツ保険料</li>
         <li>中学生　月額1500円　+　スポーツ保険料</li>
         <li>青年部　月額0円　+　スポーツ保険料</li>
         ※入会金は不要です。<br>
-        ※月謝は兄弟優遇制度があります。<br>
+        ※月会費には兄弟優遇制度があります。<br>
+        ※通常の稽古以外の活動(例　県外遠征)のため、別途費用がかかるときがあります。<br>
         <br>
 
         <h2>剣道具など</h2>
@@ -105,11 +106,8 @@
         <br>
 
         <h2>お問い合わせ</h2>
-        見学・体験をご希望の方は下記までメールをお願いいたします。<br>
-        mail : aokijimakendosyonendan@gmail.com
-        <br>
-        <br>
-        <br>
+        見学・体験をご希望の方は、お気軽に下記までご連絡ください。<br>
+        青木島剣道少年団  <font color=blue><b>aokijimakendosyonendan@gmail.com</b></font><br>
         <br>
         <a href="index.html" target="top">ホームへ</a><br>
         <a href="group.html" target="top">団の紹介、活動方針</a><br>
