--- a/public_html/santachi.html
+++ b/public_html/santachi.html
@@ -33,7 +33,7 @@
         詳細は、<a href="https://x.com/kosenjoumatsuri?s=20" target="top">川中島古戦場まつり公式X(ツイッター)</a>を御覧ください。<br>
         日時は決まり次第記載いたします。<br>
         <br>
-        ※内容は変更になる可能性があります。<br>
+        ※内容は変更になる場合があります。<br>
         
         <br>
 
