青年部　修正

--- a/public_html/youth.html
+++ b/public_html/youth.html
@@ -2,7 +2,7 @@
     <head>
         <title>青木島剣道少年団 青年部</title>
         <meta charset="UTF-8">
-        <meta keywords="長野市,剣道,大人,高校生,習い事,教室,クラブ">
+        <meta keywords="長野市,剣道,大人,高校生,リバ剣">
         <meta name="description" content="長野県長野市で活動している剣道教室です。高校生・大人の方も稽古に励んでいます。">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,11 +30,12 @@
         <h1>青年部</h1>
         青木島剣道少年団では、高校生、大人の方も稽古に参加することが可能です。<br>
         お子さんと一緒に剣道を始めてみませんか？<br>
+        40代・50代で、もう一度剣道をしたい方や、健康のために剣道をしてみたい方にぴったりの団です。
         <br>
         <h2>生涯剣道</h2>
         剣道は、生涯にわたって楽しめる武道です。<br>
         運動が苦手な方でも、無理なく続けることができます。<br>
-        剣道の経験ゼロでも、大人から始めて段位を取得することも可能です。<br>
+        剣道の経験ゼロでも、大人からはじめて初段を取得することも可能です。<br>
         <br>       
 
         <h2>稽古のイメージ</h2>
