募集情報追加

--- a/public_html/group.html
+++ b/public_html/group.html
@@ -56,13 +56,17 @@
         <li>小学4年：9名</li>
         <li>小学5年：8名</li>
         <li>小学6年：2名</li>
-        　青木島小、三本柳小、真島小、下氷鉋小、篠ノ井東小など<br>
+        　青木島小、三本柳小、真島小、下氷鉋小、篠ノ井東小、裾花小など<br>
         <br>
         <li>中学生：11名</li>
-        　更北中、広徳中、犀陵中など<br>
+        　更北中、広徳中、犀陵中、長野日本大学中など<br>
         <br>
         <li>青年部：9名</li>     
-        ※2024年1月1日現在
+        ※2024年1月1日現在<br>
+
+        <h2>運営</h2>
+        青木島剣道少年団の運営は、父母会によって行われています。<br>
+        <br>
 
         <h2>指導者</h2>
         <table border="1" cellpadding="10">
@@ -95,14 +99,12 @@
         </table>
         <br>
         <br>
-        <br>
-        <br>
         <a href="index.html" target="top">ホームへ</a><br>
         <a href="recruit.html" target="top">入団案内</a><br>
         <a href="middle_school.html" target="top">中学校部活動の地域移行</a><br>
         <a href="youth.html" target="top">青年部</a><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top"><img src="instagram_logo_c.png"　width="40" height="40"></a>
-        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="facebook_log_c.png"　width="40" height="40"></a><br>
+        <a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="facebook_log_c.png"　width="40" height="40"></a><br>
         <br>
 
     </body>
