--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -69,52 +69,78 @@
         青年部には、お子さんの保護者(初心者、リバ剣)も参加しています。<br>
         <br>
 
-        <h2>費用</h2>
-        <li>未就学児　月額0円　+　スポーツ保険料</li>
-        <li>小学生　月額1500円　+　スポーツ保険料</li>
-        <li>中学生　月額1500円　+　スポーツ保険料</li>
-        <li>青年部　月額0円　+　スポーツ保険料</li>
+        <h2>会費</h2>
+        <li>未就学児　月額会費0円　+　スポーツ安全保険料</li>
+        <li>小学生　月額会費1500円　+　スポーツ安全保険料</li>
+        <li>中学生　月額会費1500円　+　スポーツ安全保険料</li>
+        <li>青年部　月額会費0円　+　スポーツ安全保険料</li>
         ※入会金は不要です。<br>
-        ※月会費には兄弟優遇制度があります。<br>
-        ※通常の稽古以外の活動(例　県外遠征)のため、別途費用がかかるときがあります。<br>
+        ※月額会費は、3ヶ月ごとに集金します。<br>
+        ※月額会費には兄弟優遇制度があります。<br>
+        ※通常の稽古以外の活動(例　大会参加、級審査)のため、別途費用がかかります。<br>
         <br>
 
         <h2>剣道具など</h2>
         未就学児・小学生に対して、剣道具(面、胴、垂)、剣道着と袴をレンタルしています。<br>
         小手は、各自で用意してください。<br>
-        未就学児・小学生・中学生の入団時に、竹刀を1本プレゼントします。<br>
-        <br>
-        剣道具は、個人で購入される場合3～4万円くらいです。<br>
+        未就学児・小学生・中学生に対しては、入団時に竹刀を1本プレゼントします。<br>
+        剣道具は、個人で購入される場合3～4万円ぐらいです。<br>
         <br>
 
         <h2>入団～剣道具の流れ(小学生の場合)</h2>
         <img src="taiken_nagare.png">
         <br>
-        見学・体験のときは、動きやすい服装、手ぶらでお越しください。<br>
+        見学・体験のときは、<font color=red><b>動きやすい服装、手ぶら</b></font>でお越しください。<br>
         簡単な剣道の稽古を、団の子どもたちと一緒に体験してください。<br>
-        見学・稽古は何度来ていただいても大丈夫です。<br>
+        体験で使用する竹刀は、団で準備します。<br>
+        怪我をしてしまう可能性があるため、団の子どもたち同様に注意することがあります。<br>
+        見学・稽古は何度来ていただいても大丈夫です(無料です)。<br>
         1度体験しただけではわからないと思いますので、何度でも体験してください！<br>
         <br>
         遊びの要素を取り入れた稽古もやります<br>
         <a href="https://youtu.be/8hLck-Wl5a4" target="top">新聞紙切り(スマホの場合はこちらをクリックしてください)</a><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8hLck-Wl5a4?si=rCQJxzKfFdIM-kBw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        
-
-        <h2>2023年4月剣道体験会のチラシ</h2>
-        例年、4月に剣道体験会を開催しています。<br>
-        <img src="2023_taiken.jpg"><br>
+        <br>
+        <h2>稽古への参加</h2>
+        お子さんの他の習い事もあるため、ご家庭の都合にあわせてご参加ください。<br>
         <br>
 
+        <h2>級・段審査</h2>
+        小学生は、年に1回級審査を受けることができます。<br>
+        小学生の間に、最高で1級を取得することができます。<br>
+        段審査(初段以降)は、中学生から受けることができます。<br>
+        級・段審査では木刀の審査もあり、団では木刀の稽古も実施しています。<br>
+        <br>
+        <h2>大会・練成会</h2>
+        県内外で開催される各種大会・練成会に団として参加しています。<br>
+        大会・練成会への参加は希望制になります。ご家庭・お子さんの無理のない範囲でご参加いただけます。<br>
+        ※練成会は、複数の団体が合同で行う稽古会・練習試合です。
+        <br>
+
+        <h2>剣道体験会</h2>
+        例年、4月に剣道体験会を開催しています。<br>
+        2024年4月の体験会を計画中です。<br>
+        <br>
+        2023年4月の剣道体験会のチラシ<br>
+        <img src="2023_taiken.jpg"><br>
+        <br>
+        <h2>SNS</h2>
+        <a href="https://www.instagram.com/aokijima_kendo/" target="top">Instagram</a>、<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top">Facebook</a>でも情報を発信しています。<br>
+        SNS・ホームページは、団員のプライバシーに配慮して運営しています。<br>
+        <br>
+
+
         <h2>お問い合わせ</h2>
-        見学・体験をご希望の方は、お気軽に下記までご連絡ください。<br>
+        見学・体験をご希望の方は、お気軽に下記までご連絡ください。お待ちしています！<br>
         青木島剣道少年団  <font color=blue><b>aokijimakendosyonendan@gmail.com</b></font><br>
+        <a href="https://www.instagram.com/aokijima_kendo/" target="top">Instagram</a>、<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top">Facebook</a>のDMでも受け付けています。<br>
         <br>
         <a href="index.html" target="top">ホームへ</a><br>
         <a href="group.html" target="top">団の紹介、活動方針</a><br>
         <a href="middle_school.html" target="top">中学校部活動の地域移行</a><br>
         <a href="youth.html" target="top">青年部</a><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top"><img src="instagram_logo_c.png"　width="40" height="40"></a>
-        　<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="facebook_log_c.png"　width="40" height="40"></a><br>
+        <a href="https://www.facebook.com/profile.php?id=61555597563996" target="top"><img src="facebook_log_c.png"　width="40" height="40"></a><br>
         <br>
 
         
