保護者の支援　追加

--- a/public_html/first.html
+++ b/public_html/first.html
@@ -38,7 +38,7 @@
         青木島剣道少年団  <font color=#2988BC><b>aokijimakendosyonendan@gmail.com</b></font><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top">Instagram</a>、<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top">Facebook</a>のDMでも受け付けています。<br>
         <br>
-        当ホームページは、団員によって作成されています。<br>
+        当ホームページは、お子様への剣道を検討している保護者の方や、剣道をはじめたい・再開したい一般の方に、青木島剣道少年団のことを知っていただくことを目的とし、団員によって運営されています。<br>
         掲載内容に質問・問題等ございましたら、ご連絡ください。<br>
         <br>
         <a href="index.html" target="top">ホームへ</a>
