--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -84,7 +84,10 @@
         未就学児・小学生に対して、剣道具(面、胴、垂)、剣道着と袴をレンタルしています。<br>
         小手は、各自で用意してください。<br>
         未就学児・小学生・中学生に対しては、入団時に竹刀を1本プレゼントします。<br>
+        <br>
+        竹刀・剣道具は、ネット・剣道具店で購入することができます。<br>
         剣道具は、個人で購入される場合3～4万円ぐらいです。<br>
+        竹刀は、1本1000～2000円ぐらいです。<br>
         <br>
 
         <h2>入団～剣道具の流れ(小学生の場合)</h2>
@@ -101,8 +104,14 @@
         <a href="https://youtu.be/8hLck-Wl5a4" target="top">新聞紙切り(スマホの場合はこちらをクリックしてください)</a><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8hLck-Wl5a4?si=rCQJxzKfFdIM-kBw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <br>
+        
         <h2>稽古への参加</h2>
-        お子さんの他の習い事もあるため、ご家庭の都合にあわせてご参加ください。<br>
+        塾や他の習い事もあり、毎回参加できない団員もいます。ご家庭の都合にあわせてご参加ください。<br>
+        <br>
+
+        <h2>小学生保護者の支援</h2>
+        当番(稽古施設の鍵管理等)を保護者の持ち回りでお願いしています。<br>
+        初心者・低学年のお子さんの場合、保護者の方に稽古の支援をお願いすることがあります。<br>
         <br>
 
         <h2>級・段審査</h2>
@@ -111,6 +120,7 @@
         段審査(初段以降)は、中学生から受けることができます。<br>
         級・段審査では木刀の審査もあり、団では木刀の稽古も実施しています。<br>
         <br>
+
         <h2>大会・練成会</h2>
         県内外で開催される各種大会・練成会に団として参加しています。<br>
         大会・練成会への参加は希望制になります。ご家庭・お子さんの無理のない範囲でご参加いただけます。<br>
@@ -124,6 +134,7 @@
         2023年4月の剣道体験会のチラシ<br>
         <img src="2023_taiken.jpg"><br>
         <br>
+        
         <h2>SNS</h2>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top">Instagram</a>、<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top">Facebook</a>でも情報を発信しています。<br>
         SNS・ホームページは、団員のプライバシーに配慮して運営しています。<br>
