--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -82,11 +82,13 @@
 
         <h2>剣道具など</h2>
         未就学児・小学生に対して、剣道具(面、胴、垂)、剣道着と袴をレンタルしています。<br>
-        小手は、各自で用意してください。<br>
+        剣道具(小手)は、各自で用意してください。<br>
         未就学児・小学生・中学生に対しては、入団時に竹刀を1本プレゼントします。<br>
         <br>
-        竹刀・剣道具は、ネット・剣道具店で購入することができます。<br>
-        剣道具は、個人で購入される場合3～4万円ぐらいです。<br>
+        剣道具・剣道着袴、竹刀は、ネット・剣道具店で購入することができます。<br>
+        剣道具(セット)は、3～5万円ぐらいです。<br>
+        剣道具(小手のみ)は、0.7～1万円ぐらいです。<br>
+        剣道着袴(ジャージ)は、0.8～1.2万円ぐらいです。<br>
         竹刀は、1本1000～2000円ぐらいです。<br>
         <br>
 
@@ -124,7 +126,7 @@
         <h2>大会・練成会</h2>
         県内外で開催される各種大会・練成会に団として参加しています。<br>
         大会・練成会への参加は希望制になります。ご家庭・お子さんの無理のない範囲でご参加いただけます。<br>
-        ※練成会は、複数の団体が合同で行う稽古会・練習試合です。
+        ※練成会とは、複数の団体が合同で行う稽古会・練習試合のことです。<br>
         <br>
 
         <h2>剣道体験会</h2>
