稽古日　注記追加

--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -44,7 +44,9 @@
         <li>木曜 19:00-20:30 広徳中学校</li>
         <li>土曜 18:00-20:00 青木島小学校</li>
         <li>日曜 17:00-19:00 青木島小学校</li>
-        ※時間・場所は、変更になる場合があります。<br>
+        ※木曜は、小学生高学年・中学生の稽古になります。<br>
+        ※初心者は、しばらくの期間(剣道具の着装の前まで)は土曜・日曜のみになります(調整可)。<br>
+        ※時間・場所は、変更になるときがあります。<br>
         <br>
         <h3>青木島小学校</h3>
         <iframe width="50%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d800.6361510387798!2d138.18516265166076!3d36.613275567363715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601d843be68b4d0b%3A0x71f02fe792336492!2z6ZW36YeO5biC56uL6Z2S5pyo5bO25bCP5a2m5qCh!5e0!3m2!1sja!2sjp!4v1703852362657!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
