メールリンク追加

--- a/public_html/left.html
+++ b/public_html/left.html
@@ -58,7 +58,7 @@
         </tbody>    
     </table>
     <br>
-    <font color=white><b>aokijimakendosyonendan@gmail.com</b></font>
+    <a href="mailto:aokijimakendosyonendan@gmail.com"><b>aokijimakendosyonendan@gmail.com</b></a>
     <br>
     </center>  
 
