--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -147,7 +147,7 @@
 
         <h2>お問い合わせ</h2>
         見学・体験をご希望の方は、お気軽に下記までご連絡ください。お待ちしています！<br>
-        青木島剣道少年団  <font color=blue><b>aokijimakendosyonendan@gmail.com</b></font><br>
+        青木島剣道少年団  <a href="mailto:aokijimakendosyonendan@gmail.com"><b>aokijimakendosyonendan@gmail.com</b></a><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top">Instagram</a>、<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top">Facebook</a>のDMでも受け付けています。<br>
         <br>
         <a href="index.html" target="top">ホームへ</a><br>
