--- a/public_html/first.html
+++ b/public_html/first.html
@@ -35,7 +35,7 @@
         <br>
         <h2>お問い合わせ</h2>
         見学・体験をご希望の方は、お気軽に下記までご連絡ください。<br>
-        青木島剣道少年団  <font color=#2988BC><b>aokijimakendosyonendan@gmail.com</b></font><br>
+        青木島剣道少年団  <a href="mailto:aokijimakendosyonendan@gmail.com"><b>aokijimakendosyonendan@gmail.com</b></a><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top">Instagram</a>、<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top">Facebook</a>のDMでも受け付けています。<br>
         <br>
         当ホームページは、お子様への剣道を検討している保護者の方や、剣道をはじめたい・再開したい一般の方に、青木島剣道少年団のことを知っていただくことを目的とし、団員によって運営されています。<br>
