トップ体験強化月間表示追加、三太刀日程追加
トップに体験強化月間の表示を追加
三太刀の日付が決まったため追加

--- a/public_html/first.html
+++ b/public_html/first.html
@@ -29,7 +29,8 @@
         青木島剣道少年団は、33年にわたり<br>
         長野県長野市更北地区で活動する社会体育の剣道教室です。<br>
         小学生、中学生、青年部(高校生、大人)が稽古に励んでいます。<br>
-        <font color=#2988BC size="5" ><b>見学・体験を随時募集中！</b></font>
+        <img src="kyouka.png" width="30%">
+        
         <br>
         <img src="top.jpg" width="50%">
         <br>
