--- a/public_html/santachi.html
+++ b/public_html/santachi.html
@@ -28,13 +28,10 @@
     </style>
     <body>
         <h1>三太刀まつり</h1>
-        2024年春、川中島古戦場三太刀まつり内のイベントとして、剣道東西対抗戦と剣道体験会を計画しています。<br>
+        2024年4月13日(土)、川中島古戦場三太刀まつり内のイベントとして、剣道東西対抗戦と剣道体験会を計画しています。<br>
         ぜひ、お越しください！<br>
         詳細は、<a href="https://x.com/kosenjoumatsuri?s=20" target="top">川中島古戦場まつり公式X(ツイッター)</a>を御覧ください。<br>
-        日時は決まり次第記載いたします。<br>
         <br>
-        ※内容は変更になる場合があります。<br>
-        
         <br>
 
         <h2>剣道東西対抗戦　三太刀杯</h2>
