活動に湯けむり、山梨を追加。2月新入団員を追加
activityに、湯けむり大会、山梨大会を追加
2月の新入団員から人数を変更

--- a/public_html/middle_school.html
+++ b/public_html/middle_school.html
@@ -50,7 +50,9 @@
         経験者には、基本に加えて試合に向けた稽古を行います。<br>
         それぞれのレベルに適した運動量のある稽古を行います。<br>
         <br>
-        
+        <h3>2024年度の中学新1年生が入団しました</h3>
+        2024年2月、小学6年生の剣道初心者さんが入団しました。とってもうれしいです。よろしくお願いいたします。<br>
+        <br>
         <h3>中学1年から剣道をはじめた場合の3年間のイメージ</h3>
         <table border="1"  cellpadding="10">
             <tr>
