--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -51,27 +51,30 @@
     05月20日　松代藩文武学校杯争奪小学生選抜剣道大会(練成会)<br>
     05月21日　松代藩文武学校杯争奪小学生選抜剣道大会<br>
     07月09日　長野県小学生剣道錬成大会<br>
-    07月16日　海の日越後少年剣道錬成大会<br>
+    07月16日　新潟　海の日越後少年剣道錬成大会<br>
     07月17日　長野南地区剣道大会<br>
-    07月22日　全日本少年少女剣道錬成大会<br>
+    07月22日　東京　全日本少年少女剣道錬成大会<br>
     08月11日　日大記念大会<br>
     08月12日　信大大会<br>
     08月19日　レク　新入団員歓迎会<br>
     09月02日　合宿<br>
     09月16日　中野市少年剣道練成会<br>
     09月17日　長野市柔剣道大会<br>
-    09月23日　上越少年剣道練成会<br>
+    09月23日　新潟　上越少年剣道練成会<br>
     10月08日　真田まつり<br>
     10月09日　権堂大会<br>
     10月28日　レク　ハロウィン<br>
-    11月03日　更埴大会<br>
-    11月05日　佐久っこ大会<br>
-    11月23日　小坂憲次杯<br>
-    12月03日　みすずライオンズ杯争奪長野少年剣道大会<br>
-    12月17日　やまびこ大会<br>
-    12月22日　部内大会<br>
+    11月03日　更埴大会　(小、中、青)<br>
+    11月05日　佐久っこ大会　(小、中)<br>
+    11月23日　小坂憲次杯　(小、中、青)<br>
+    12月03日　みすずライオンズ杯争奪長野少年剣道大会　(小、中)<br>
+    12月17日　やまびこ大会　(小、中)<br>
+    12月22日　部内大会　(小、中)<br>
     01月07日　レク　稽古始め<br>
     02月03日　レク　節分豆まき<br>
+    02月24日　湯けむり少年剣道大会　(小、中)<br>
+    03月02日　山梨　森島健男旗争奪　東日本選抜少年剣道大会　(小、中)<br>
+    03月03日　山梨　森島健男旗争奪　東日本選抜少年剣道大会(練成会)　(小、中)<br>
     <br>
 
     <h3>稽古以外のイベントも楽しく活動しています</h3>
