AIで文章変更

--- a/public_html/middle_school.html
+++ b/public_html/middle_school.html
@@ -41,14 +41,20 @@
         中学校部活動の地域移行に伴い、<br>
         長野市更北地区周辺の中学校剣道部でも地域クラブへの移行が進んでいます。<br>
         <br>
-        青木島剣道少年団は、中学生の皆さんを歓迎します。<br>
-        剣道初心者及び経験者の皆さん、ぜひ一緒に楽しく稽古をしましょう！<br>
+        青木島剣道少年団は、中学生の皆さんを大歓迎しています！<br>
+        剣道初心者の方も剣道経験者の方も、一緒に楽しく稽古をしましょう！<br>
         <br>
         <img src="bukatu.png" width="50%"><br>
         <br>
-        初心者には、基本的な稽古(足さばき、素振り)から、<br>
-        経験者には、基本に加えて試合に向けた稽古を行います。<br>
-        それぞれのレベルに適した運動量のある稽古を行います。<br>
+        初心者の方には、足さばきや素振りの基本的な稽古を行います。<br>
+        経験者の方には、基本に加えて試合に向けた稽古も行います。<br>
+        どちらのレベルにも合わせた運動量のある稽古を行います。<br>
+        <br>
+        剣道はすばらしいスポーツです。<br>
+        集中力や体力、そして礼儀作法も身につけることができます。<br>
+        一緒に努力し、成長していきましょう！<br>
+        剣道を通じて新しい友達もできるかもしれません<br>
+        ぜひ一度、青木島剣道少年団に遊びに来てください。お待ちしています！<br>
         <br>
         <h3>2024年度の中学新1年生が入団しました</h3>
         2024年2月、小学6年生の剣道初心者さんが入団しました。とってもうれしいです。よろしくお願いいたします。<br>
@@ -79,14 +85,14 @@
         青木島剣道少年団名義で中体連の大会に参加する中学生は、火・木・土(または日)の稽古(合計週3回)になります。<br>
         
         <h3>スポハラの禁止</h3>
-        スポハラ(暴力、暴言、ハラスメント)を禁止しています。<br>
-        指導員に対して、<a href="https://www.japan-sports.or.jp/coach/tabid1402.html" target="top"">日本スポーツ協会 グッドコーチの教育</a>を実施し、指導方法の意識合わせをしています。<br>
-        指導員に対して、自己の鍛錬、各種講習会への参加及び資格の取得を推奨しています。<br>
+        私たちはスポハラ(暴力、暴言、ハラスメント)を厳しく禁止しています。<br>
+        指導員は、<a href="https://www.japan-sports.or.jp/coach/tabid1402.html" target="top"">日本スポーツ協会 グッドコーチの教育</a>を受け、指導方法について意識を高めています。<br>
+        また、指導員自身も鍛錬や講習会に参加し、資格の取得に努めています。<br>
 
         <h3>指導員の連携</h3>
-        中学生に対して常に同じ指導員が指導できないため、密に連携をとり指導内容の意識合わせをしながら指導にあたります。<br>
-        <br>
-        <br>
+        中学生に対しては、常に同じ指導員が指導できない場合があります。<br>
+        指導員同士が連携し、指導内容を統一するよう努めています。<br>
+        子どもたちが安心して稽古に取り組めるよう、指導体制を整えています。<br>
         <br>
         <br>
         <a href="index.html" target="top">ホームへ</a><br>
