--- a/public_html/santachi.html
+++ b/public_html/santachi.html
@@ -28,17 +28,16 @@
     </style>
     <body>
         <h1>三太刀まつり</h1>
-        2024年4月13日(土)、川中島古戦場三太刀まつり内のイベントとして、剣道東西対抗戦と剣道体験会を計画しています。<br>
-        ぜひ、お越しください！<br>
+        2024年4月13日(土)、川中島古戦場三太刀まつり内のイベントとして、剣道東西対抗戦と剣道体験会が開催されます。<br>
+        ぜひ、お花見ついでにご参加ください！<br>
         詳細は、<a href="https://x.com/kosenjoumatsuri?s=20" target="top">川中島古戦場まつり公式X(ツイッター)</a>を御覧ください。<br>
         <br>
         <br>
 
         <h2>剣道東西対抗戦　三太刀杯</h2>
-        更北地区の剣道クラブ(数チーム)の小中学生が、川中島合戦をイメージした武田軍・上杉軍に分かれて東西対抗の試合をします。<br>
+        更北地区の剣道クラブ(数チーム)の小中学生が、川中島合戦をイメージした武田軍・上杉軍に分かれて東西対抗の試合を行います。<br>
         <img src="santachi.jpg"><br>
-        応援をよろしくお願いします！<br>
-        屋外での試合になります。<br>
+        屋外での試合になりますので、応援をよろしくお願いします！<br>
         <br>
 
 
