--- a/public_html/youth.html
+++ b/public_html/youth.html
@@ -28,22 +28,28 @@
     </style>
     <body>
         <h1>青年部</h1>
-        青木島剣道少年団では、高校生、大人の方も稽古に参加することが可能です。<br>
-        お子さんと一緒に剣道を始めてみませんか？<br>
-        40代・50代で、もう一度剣道をしたい方や、健康のために剣道をしてみたい方にぴったりの団です。
+        青木島剣道少年団では、高校生や大人の方も一緒に稽古に参加することができます。<br>
+        剣道を始めてみませんか？<br>
+        年齢に関係なく、40代や50代からでも大歓迎です。<br>
+        健康のために剣道を始める方や、もう一度剣道に調整したい方にぴったりの団です。
         <br>
         <h2>生涯剣道</h2>
-        剣道は、生涯にわたって楽しめる武道です。<br>
-        運動が苦手な方でも、無理なく続けることができます。<br>
-        剣道の経験ゼロでも、大人からはじめて初段を取得することも可能です。<br>
+        剣道は、生涯にわたって楽しむことができる武道です。<br>
+        運動が苦手な方でも大丈夫です。<br>
+        経験がなくても大丈夫です。<br>
+        大人から始めて初段の段位を取得することも可能です。<br>
         <br>       
 
         <h2>稽古のイメージ</h2>
-        体力・時間の都合もあるので、来れるときに来ていただき剣道を楽しんで頂いて大丈夫です。<br>
-        準備体操は、念入りにやってください。<br>
-
-        稽古中に疲れた場合、いつでも休憩することができます。<br>
-        大人の場合、飲み込みが早いため、2ヶ月ほどで剣道具(面、胴、垂、小手)を着装できるようになります。<br>
+        体力や時間の都合に合わせて参加していただけます。<br>
+        準備体操をしっかりと行ってから稽古に入ります。<br>
+        もし、稽古中に疲れてしまった場合はいつでも休憩することができます。<br>
+        大人の方は理解力が早いので、2ヶ月ほどで剣道具(面、胴、垂、小手)を着装できるようになります。<br>
+        <br>
+        剣道は心身の調和と集中力を養う素晴らしいスポーツです。<br>
+        新しい挑戦をしてみたい方や、心地よい汗を流しながら健康を維持したい方にぜひおすすめです。<br>
+        一緒に剣道の世界を楽しみましょう！<br>
+        興味を持たれた方は、ぜひお気軽にご参加ください。お待ちしています。<br>
         <img src="youth.png"><br>
         <br>
 
