面付けの記述削除

--- a/public_html/first.html
+++ b/public_html/first.html
@@ -28,23 +28,17 @@
         <h1>ようこそ!　青木島剣道少年団 ホームページへ</h1>
         青木島剣道少年団は、33年にわたり<br>
         長野県長野市更北地区で活動している剣道教室です。<br>
-        小学生、中学生、そして青年部(高校生、大人)の皆さんが一緒に稽古に取り組んでいます。<br>
+        小学生、中学生、そして青年部(高校生、大人)が一緒に稽古に取り組んでいます。<br>
         <img src="kyouka.png" width="30%">
         
         <br>
         <img src="top.jpg" width="50%">
         <br>
         <h2>お問い合わせ</h2>
-        もし見学や体験をご希望される方がいらっしゃいましたら、お気軽に以下の方法でご連絡ください。<br>
+        見学や体験をご希望される方がいらっしゃいましたら、お気軽に以下の方法でご連絡ください。<br>
         青木島剣道少年団  <a href="mailto:aokijimakendosyonendan@gmail.com"><b>aokijimakendosyonendan@gmail.com</b></a><br>
         <a href="https://www.instagram.com/aokijima_kendo/" target="top">Instagram</a>や<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top">Facebook</a>のダイレクトメッセージ(DM)でも受け付けています。<br>
         <br>
-        ご質問やお問い合わせも、上記の連絡先からお気軽にお寄せいただけます。<br>
-        私たちはお子さまの参加を心待ちにしております。どうぞお気軽にご連絡ください。<br>
-        <br>
-        <br>
-        当ホームページは、お子様への剣道を検討している保護者の方や、剣道をはじめたい・再開したい一般の方に、青木島剣道少年団のことを知っていただくために運営されています。<br>
-        掲載内容にご質問や問題がございましたら、どうぞお気軽にご連絡ください。<br>
         <br>
         <a href="index.html" target="top">ホームへ</a>
         <br>
