--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -44,7 +44,6 @@
         <li>木曜 19:00-20:30 広徳中学校(小学生高学年・中学生の稽古となります)</li>
         <li>土曜 18:00-20:00 青木島小学校</li>
         <li>日曜 17:00-19:00 青木島小学校</li>
-        なお、初心者の方はしばらくの間(剣道具の着装の前まで)、土曜日と日曜日の稽古に参加していただくことになります(調整は可能です)。<br>
         稽古の時間や場所は、変更されることがあります。<br>
         <br>
         <h3>青木島小学校</h3>
@@ -93,7 +92,7 @@
         竹刀は、1本1000～2000円ぐらいです。<br>
         <br>
 
-        <h2>入団～剣道具の流れ(小学生の場合)</h2>
+        <h2>体験～入団の流れ</h2>
         <img src="taiken_nagare.png">
         <br>
         見学・体験のときは、<font color=red><b>動きやすい服装、手ぶら</b></font>でお越しください。<br>
@@ -145,9 +144,9 @@
 
 
         <h2>お問い合わせ</h2>
-        見学・体験をご希望の方は、お気軽に下記までご連絡ください。お待ちしています！<br>
+        見学や体験をご希望される方がいらっしゃいましたら、お気軽に以下の方法でご連絡ください。<br>
         青木島剣道少年団  <a href="mailto:aokijimakendosyonendan@gmail.com"><b>aokijimakendosyonendan@gmail.com</b></a><br>
-        <a href="https://www.instagram.com/aokijima_kendo/" target="top">Instagram</a>、<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top">Facebook</a>のDMでも受け付けています。<br>
+        <a href="https://www.instagram.com/aokijima_kendo/" target="top">Instagram</a>や<a href="https://www.facebook.com/profile.php?id=61555597563996" target="top">Facebook</a>のダイレクトメッセージ(DM)でも受け付けています。<br>
         <br>
         <a href="index.html" target="top">ホームへ</a><br>
         <a href="group.html" target="top">団の紹介、活動方針</a><br>
