三大刀読み方修正

--- a/public_html/left.html
+++ b/public_html/left.html
@@ -50,7 +50,7 @@
             <tr><td></td></tr>
             <tr><td><a href="youth.html" target="right"><img src="btn_youth.png"></a></td></tr>
             <tr><td></td></tr>
-            <tr><td><a href="santachi.html" target="right"><img src="btn_santachi.png"></a></td></tr>
+            <tr><td><a href="mitachi.html" target="right"><img src="btn_santachi.png"></a></td></tr>
             <tr><td>　</td></tr>
             <tr><td>
                 　<a href="https://www.instagram.com/aokijima_kendo/" target="top"><img src="instagram_log.png"　width="40" height="40"></a>
