--- a/public_html/mitachi.html
+++ b/public_html/mitachi.html
@@ -36,7 +36,7 @@
 
         <h2>剣道東西対抗戦　三太刀杯</h2>
         更北地区の剣道クラブ(数チーム)の小中学生が、川中島合戦をイメージした武田軍・上杉軍に分かれて東西対抗の試合を行います。<br>
-        <img src="santachi.jpg"><br>
+        <img src="mitachi.jpg"><br>
         屋外での試合になりますので、応援をよろしくお願いします！<br>
         <br>
 
@@ -54,7 +54,7 @@
 
 
         <h2>前回(2023年4月)の様子</h2>
-        <img src="santachi_2.jpg"><br>
+        <img src="mitachi_2.jpg"><br>
         <br>
 
                     
