みらいハッケンプロジェクト　追加

--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -78,6 +78,13 @@
         ※月額会費は、3ヶ月ごとに集金します。<br>
         ※月額会費には兄弟優遇制度があります。<br>
         ※通常の稽古以外の活動(例　大会参加、級審査)のため、別途費用がかかります。<br>
+
+        <h2>長野市 みらいハッ！ケンプロジェクト</h2>
+        <img src="nagano_mirai_0831_rogo.png"><br>
+        2024年度 長野市こどもの体験・学び応援事業<br>
+        <a href="https://nagano-hakken.jp/" target="top">みらいハッ！ケンプロジェクト</a><br> 
+        参画パートナー登録 を計画しています。<br>
+
         <br>
 
         <h2>剣道具など</h2>
