誤記修正　富山追加

--- a/public_html/group.html
+++ b/public_html/group.html
@@ -49,6 +49,7 @@
 
         <br>
         <h2>団員数</h2>
+        総数約50名<br>
         <li>未就学児：0名</li>
         <li>小学1年：5名</li>
         <li>小学2年：2名</li>
