--- a/public_html/middle_school.html
+++ b/public_html/middle_school.html
@@ -87,7 +87,7 @@
         <h3>スポハラの禁止</h3>
         私たちはスポハラ(暴力、暴言、ハラスメント)を厳しく禁止しています。<br>
         指導員は、<a href="https://www.japan-sports.or.jp/coach/tabid1402.html" target="top"">日本スポーツ協会 グッドコーチの教育</a>を受け、指導方法について意識を高めています。<br>
-        また、指導員自身も鍛錬や講習会に参加し、資格の取得に努めています。<br>
+        また、指導員に対して、自己の鍛錬や講習会への参加を推奨しています。<br>
 
         <h3>指導員の連携</h3>
         中学生に対しては、常に同じ指導員が指導できない場合があります。<br>
