--- a/public_html/mitachi.html
+++ b/public_html/mitachi.html
@@ -35,7 +35,7 @@
         <br>
 
         <h2>剣道東西対抗戦　三太刀杯</h2>
-        更北地区の剣道クラブ(数チーム)の小中学生が、川中島合戦をイメージした武田軍・上杉軍に分かれて東西対抗の試合を行います。<br>
+        更北地区の剣道クラブ(数チーム)の小中学生(約50人)が、川中島合戦をイメージした武田軍・上杉軍に分かれて東西対抗の試合を行います。<br>
         <img src="mitachi.jpg"><br>
         屋外での試合になりますので、応援をよろしくお願いします！<br>
         <br>
