--- a/public_html/recruit.html
+++ b/public_html/recruit.html
@@ -41,7 +41,7 @@
 
         <h2>稽古日時・場所</h2>
         <li>火曜 19:00-20:30 更北中学校</li>
-        <li>木曜 19:00-20:30 広徳中学校(小学生高学年・中学生の稽古となります)</li>
+        <li>木曜 19:00-20:30 更北中学校(小学生高学年・中学生の稽古となります)</li>
         <li>土曜 18:00-20:00 青木島小学校</li>
         <li>日曜 17:00-19:00 青木島小学校</li>
         稽古の時間や場所は、変更されることがあります。<br>
@@ -54,12 +54,6 @@
         <iframe width="50%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d800.7252642416024!2d138.1919373575272!3d36.604691961065754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601d844f05c63537%3A0x6fd82f31fb8c0b4d!2z6ZW36YeO5biC56uL5pu05YyX5Lit5a2m5qCh!5e0!3m2!1sja!2sjp!4v1703852451099!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <br>
         <br>
-        <h3>広徳中学校</h3>
-        <iframe width="50%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10774.510148802243!2d138.17258362530407!3d36.59554000842609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601d84650afa3801%3A0x75d8fb55936216b0!2z6ZW36YeO5biC56uL5bqD5b6z5Lit5a2m5qCh!5e0!3m2!1sja!2sjp!4v1703852481733!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <br>
-
-
-
         <h2>対象</h2>
         <li>未就学児(年長ぐらい)</li>
         <li>小学生</li>
