--- a/public_html/youth.html
+++ b/public_html/youth.html
@@ -31,7 +31,7 @@
         青木島剣道少年団では、高校生や大人の方も一緒に稽古に参加することができます。<br>
         剣道を始めてみませんか？<br>
         年齢に関係なく、40代や50代からでも大歓迎です。<br>
-        健康のために剣道を始める方や、もう一度剣道に調整したい方にぴったりの団です。
+        健康のために剣道を始める方や、もう一度剣道に挑戦したい方にぴったりの団です。
         <br>
         <h2>生涯剣道</h2>
         剣道は、生涯にわたって楽しむことができる武道です。<br>
