--- a/public_html/activity.html
+++ b/public_html/activity.html
@@ -75,6 +75,7 @@
     02月24日　湯けむり少年剣道大会　(小、中)<br>
     03月02日　山梨　森島健男旗争奪　東日本選抜少年剣道大会　(小、中)<br>
     03月03日　山梨　森島健男旗争奪　東日本選抜少年剣道大会(練成会)　(小、中)<br>
+    03月10日　富山　斎籐弥九郎顕彰碑建立記念少年剣道大会(小)
     <br>
 
     <h3>稽古以外のイベントも楽しく活動しています</h3>
